# apps/api/domain/authentications/repository.go
@@ -1,0 +1,9 @@
+package authentications
+
+import (
+	"context"
+)
+
+type Repository interface {
+	GetUserByUsername(ctx context.Context, username string) (User, error)
+}
